# test_embeddings

./: README.md  bow_embeddings.txt  glove_embeddings.txt  main.py  pyproject.toml  sample_text.txt  tfidf_embeddings.txt
processed/: processed_docs.txt
results/: similar_words.txt  word2vec_embeddings.txt
