[project]
name = "text-embedding-methods"
version = "0.1.0"
description = "A project demonstrating and comparing different text embedding methods including BOW, TF-IDF, Word2Vec and GloVe"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0", 
    "scikit-learn>=1.0.0",
    "gensim>=4.0.0",
    "nltk>=3.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0"
]


